--- a/src/index.scss
+++ b/src/index.scss
@@ -4,8 +4,8 @@ $post-dark: #0f2d45;
 $post-light: #f8f8f8;
 $text-dark: #080f14;
 $text-light: #fff;
-$header-light: #f6f5f5;
-$header-dark: #2d3c58;
+$navbar-light: #f6f5f5;
+$navbar-dark: #2d3c58;
 $footer-light: #f8f8f8;
 $footer-dark: #253047;
 $primary-dark: #3258e0;
@@ -20,7 +20,7 @@ $green: rgb(10, 147, 152);
   --primary-color: #{$primary-dark};
   --secondary-color: #{$secondary};
   --green-color: #{$green};
-  --header-color: #{$header-light};
+  --header-color: #{$navbar-light};
   --footer-color: #{$footer-light};
 }
 
@@ -31,35 +31,36 @@ $green: rgb(10, 147, 152);
   --primary-color: #{$primary-light};
   --secondary-color: #{$secondary};
   --green-color: #{$green};
-  --header-color: #{$header-dark};
+  --header-color: #{$navbar-dark};
   --footer-color: #{$footer-dark};
 }
 
-.main {
-  height: 100vh;
-  width: 100%;
+@font-face {
+  font-family: 'title';
+  src: url('./assets/fonts/yekan.ttf');
+}
+@font-face {
+  font-family: 'text';
+  src: url('./assets/fonts/vazir.ttf');
+}
+
+* {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+  text-decoration: none;
+  box-sizing: border-box;
+  font-family: 'text';
+}
+
+body {
   background-color: var(--bg-color);
   color: var(--text-color);
 }
 
-.main h1 {
-  font-family: "title";
-  font-weight: 900;
-  font-size: 50px;
-  color: var(--primary-color);
-  background-color: var(--header-color);
-}
-
-.main p {
-  font-family: "title";
-  font-size: 17px;
-  background-color: var(--secondary-color);
-  color: #fff;
-}
-
-.post p {
-  padding: 20px;
-  background-color: var(--footer-color);
-  color: rgb(255, 255, 255);
-  height: 600px;
+.main {
+  background-color: var(--bg-color);
+  color: var(--text-color);
+  height: 100vh;
+  transition: all ease-in-out 0.1s;
 }
