--- a/src/index.scss
+++ b/src/index.scss
@@ -40,6 +40,10 @@ $green: rgb(10, 147, 152);
   src: url('./assets/fonts/yekan.ttf');
 }
 @font-face {
+  font-family: 'black-title';
+  src: url('./assets/fonts/craft.ttf');
+}
+@font-face {
   font-family: 'text';
   src: url('./assets/fonts/vazir.ttf');
 }
