--- a/src/index.scss
+++ b/src/index.scss
@@ -40,8 +40,8 @@ $green: rgb(10, 147, 152);
   src: url('./assets/fonts/yekan.ttf');
 }
 @font-face {
-  font-family: 'black-title';
-  src: url('./assets/fonts/craft.ttf');
+  font-family: 'fanum';
+  src: url('./assets/fonts/farsinum.ttf');
 }
 @font-face {
   font-family: 'text';
