--- a/src/components/Homepage/TopSlider/topslider.scss
+++ b/src/components/Homepage/TopSlider/topslider.scss
@@ -22,6 +22,7 @@
     .topslider-swiper-slide {
       background-color: var(--post-color);
       color: var(--text-color);
+      position: relative;
     }
 
     .topslider-swiper-slide img {
@@ -32,12 +33,49 @@
     }
 
     .topslider-content {
-      padding: 15px 25px;
+      padding: 15px;
       h3 {
         font-size: 15px;
       }
       p {
         font-size: 13px;
+      }
+    }
+
+    .topslider-info {
+      display: flex;
+      flex-direction: column;
+      flex-wrap: wrap;
+
+      padding: 0 15px;
+      font-weight: 900;
+
+      p {
+        font-family: 'fanum';
+        font-size: 12px;
+        display: flex;
+        justify-content: flex-start;
+        align-items: center;
+        gap: 4px;
+      }
+
+      .topslider-price {
+        color: var(--green-color);
+        padding: 3px 5px;
+        width: fit-content;
+        border-radius: 3px;
+      }
+      .topslider-category {
+        color: var(--primary-color);
+        padding: 3px 5px;
+        width: fit-content;
+        border-radius: 3px;
+      }
+      .topslider-restaurant {
+        color: var(--secondary-color);
+        padding: 3px 5px;
+        width: fit-content;
+        border-radius: 3px;
       }
     }
   }
