--- a/src/components/Homepage/TopSlider/topslider.scss
+++ b/src/components/Homepage/TopSlider/topslider.scss
@@ -1,7 +1,8 @@
 .topslider-page {
-  padding: 50px 10%;
+  padding: 0 10%;
   background-color: var(--bg-color);
   color: var(--text-color);
+  width: 100%;
 
   .topslider-header {
     h2 {
@@ -18,11 +19,16 @@
     width: 100%;
     height: 100%;
     padding-bottom: 70px;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
     .topslider-swiper-slide {
       background-color: var(--post-color);
       color: var(--text-color);
       position: relative;
+      box-shadow: 1px 1px 5px 1px rgba(0, 0, 0, 0.1);
     }
 
     .topslider-swiper-slide img {
@@ -83,5 +89,11 @@
         padding: 10px 0 20px 0;
       }
     }
+  }
+}
+
+@media screen and (max-width: 392px) {
+  .topslider-btn-container {
+    flex-direction: column;
   }
 }
