--- a/src/components/Homepage/IranianFood/iranianfood.scss
+++ b/src/components/Homepage/IranianFood/iranianfood.scss
@@ -1,6 +1,5 @@
 .iranian-food {
   padding: 100px 10%;
-
   background-color: var(--bg-color);
   color: var(--text-color);
   width: 100%;
@@ -69,12 +68,13 @@
           color: #fff;
         }
         .iranian-food-soldout {
-          background-color: gray;
+          background-color: rgb(66, 66, 66);
           color: #fff;
           padding: 4px 8px;
           border-radius: 9px;
           font-weight: 900;
           font-size: 17px;
+          box-shadow: 1px 1px 10px 1px rgba(0, 0, 0, 0.5);
         }
       }
     }
