--- a/src/components/Homepage/TopSection/topsection.scss
+++ b/src/components/Homepage/TopSection/topsection.scss
@@ -2,6 +2,10 @@
   padding: 50px 5%;
   display: flex;
   gap: 20px;
+  height: 100%;
+  width: 100%;
+  background-color: var(--bg-color);
+  color: var(--text-color);
 
   //   RIGHT
   .top-section-right {
