--- a/src/components/Homepage/FoodStory/foodstory.scss
+++ b/src/components/Homepage/FoodStory/foodstory.scss
@@ -4,8 +4,9 @@
   color: var(--text-color);
   .page-title {
     h2 {
-      font-size: 32px;
-      font-weight: 900;
+      font-size: 30px;
+      font-family: 'title';
+      margin-bottom: 10px;
     }
 
     p {
