--- a/src/components/Homepage/IranianFood/iranianfood.scss
+++ b/src/components/Homepage/IranianFood/iranianfood.scss
@@ -4,7 +4,8 @@
   color: var(--text-color);
   width: 100%;
 
-  .iranian-food {
+  .iranian-food-header {
+    margin-bottom: 50px;
     h2 {
       font-size: 30px;
       font-family: 'title';
