--- a/src/components/Footer/footer.scss
+++ b/src/components/Footer/footer.scss
@@ -21,11 +21,11 @@
       }
       h2 {
         font-size: 36px;
+        font-family: 'title';
         font-weight: 900;
-        color: var(--primary-color);
       }
       p {
-        color: #3a5578;
+        color: var(--text-color);
         text-align: justify;
         line-height: 1.8;
       }
@@ -38,19 +38,23 @@
       input {
         width: 100%;
         padding: 15px 20px;
-        border-bottom: 1px solid var(--primary-color);
+        border: none;
         outline: none;
+        background-color: var(--footer-color);
+        border-bottom: 1px solid var(--text-color);
+        color: var(--text-color);
       }
 
       button {
         position: absolute;
         background-color: var(--primary-color);
         color: #fff;
-        padding: 10px 18px;
+        padding: 7px 18px;
         border-radius: 6px;
         border: none;
-        left: 10px;
-        bottom: 5px;
+        left: 6px;
+        bottom: 9px;
+        cursor: pointer;
       }
     }
 
@@ -70,10 +74,10 @@
           li {
             font-size: 28px;
             a {
-              color: var(--primary-color);
+              color: var(--text-color);
               transition: all ease-in-out 0.1s;
               &:hover {
-                color: var(--orange);
+                color: var(--primary-color);
               }
             }
           }
@@ -90,7 +94,7 @@
         h3 {
           font-size: 18px;
           font-weight: 900;
-          color: var(--green-color);
+          color: var(--text-color);
         }
       }
       .left-top-link {
@@ -115,7 +119,7 @@
             }
             &:hover {
               transform: translateX(-3px);
-              color: var(--green-color);
+              color: var(--text-color);
             }
           }
         }
@@ -128,7 +132,7 @@
           font-size: 18px;
           font-weight: 900;
           margin-bottom: 30px;
-          color: var(--green-color);
+          color: var(--text-color);
         }
       }
       .left-middle-links {
@@ -153,7 +157,7 @@
             }
             &:hover {
               transform: translateX(-3px);
-              color: var(--green-color);
+              color: var(--text-color);
             }
           }
         }
@@ -165,11 +169,11 @@
       text-align: center;
       .copyright {
         font-size: 18px;
-        color: var(--primary-color);
+        color: var(--text-color);
       }
       .designer {
         font-size: 16px;
-        color: #4b4541;
+        color: var(--text-color);
         font-weight: 900;
         margin-top: 10px;
       }
