--- a/src/components/Homepage/Blog/blog.scss
+++ b/src/components/Homepage/Blog/blog.scss
@@ -1,5 +1,5 @@
 .blog-container {
-  padding: 50px 10%;
+  padding: 50px 10% 150px 10%;
   background-color: var(--bg-color);
   color: vaR(--text-color);
 
@@ -44,17 +44,20 @@
             display: flex;
             margin: 10px 0;
             gap: 8px;
+
             .date {
               background-color: var(--primary-color);
               color: #fff;
-              padding: 5px 10px;
+              padding: 3px 7px;
               border-radius: 10px;
+              font-size: 15px;
             }
             .author {
               background-color: var(--secondary-color);
               color: #fff;
-              padding: 5px 10px;
+              padding: 3px 7px;
               border-radius: 10px;
+              font-size: 15px;
             }
           }
         }
@@ -65,18 +68,6 @@
 
         .button {
           margin-top: 20px;
-          background-color: var(--primary-color);
-          color: #fff;
-          width: fit-content;
-          padding: 8px 15px;
-          border: none;
-          border-radius: 6px;
-          cursor: pointer;
-          transition: all ease-in-out 0.1s;
-          &:hover {
-            background-color: var(--light);
-            color: #333;
-          }
         }
       }
     }
