--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -1,14 +1,18 @@
-.header {
+header {
   height: 70px;
+  width: 100%;
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 0 10%;
   background-color: var(--bg-color);
   color: var(--text-color);
-  box-shadow: 1px 1px 5px 1px rgba(0, 0, 0, 0.1);
+  box-shadow: 1px 1px 3px 1px rgba(0, 0, 0, 0.2);
   transition: all ease-in-out 0.1s;
-  position: relative;
+  z-index: 999;
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 500ms;
 
   // HAMBURGER-MENU
   .hamburger-menu-icon {
@@ -117,6 +121,30 @@
     .header-icon {
       font-size: 18px;
     }
+  }
+}
+
+.is-sticky {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 999;
+  padding-top: 0px;
+  padding-bottom: 0px;
+  animation: fadein 1s;
+  z-index: 9999;
+  height: 58px;
+}
+
+@keyframes fadein {
+  0% {
+    opacity: 0;
+    top: -50;
+  }
+  100% {
+    opacity: 1;
+    top: 0;
   }
 }
 
