--- a/src/components/Homepage/Blog/blog.scss
+++ b/src/components/Homepage/Blog/blog.scss
@@ -64,11 +64,11 @@
         .content p {
           font-size: 14px;
           text-align: justify;
+          margin-bottom: 20px;
         }
 
-        .button {
-          margin-top: 20px;
-        }
+        // .button {
+        // }
       }
     }
   }
