--- a/src/pages/Cart/cart.scss
+++ b/src/pages/Cart/cart.scss
@@ -35,6 +35,7 @@
       margin-bottom: 25px;
       padding: 15px;
       box-shadow: 1px 1px 4px 1px rgba(0, 0, 0, 0.1);
+      position: relative;
       .cart-left {
         width: auto;
         display: flex;
@@ -67,13 +68,26 @@
           }
         }
 
+        .cart-delete-btn {
+          width: 50px;
+        }
+
         .cart-quantity {
-          button {
+          .quantity-btn {
             width: 25px;
             height: 25px;
             border: none;
             background-color: var(--primary-color);
             color: #fff;
+            cursor: pointer;
+          }
+          .cart-remove-btn {
+            border: none;
+            margin-right: 10px;
+            background-color: tomato;
+            color: #fff;
+            padding: 2px 6px;
+            border-radius: 3px;
             cursor: pointer;
           }
           span {
