--- a/src/components/shared/AddToCart/addtocart.scss
+++ b/src/components/shared/AddToCart/addtocart.scss
@@ -11,4 +11,9 @@
   gap: 5px;
   font-size: 13px;
   cursor: pointer;
+  &:active {
+    background-color: black;
+    border-bottom: 1px solid var(--secondary-color);
+    transform: translateY(2px);
+  }
 }
