--- a/src/pages/Production/SingleProduction/singleproduction.scss
+++ b/src/pages/Production/SingleProduction/singleproduction.scss
@@ -1,141 +1,73 @@
 .singleProduct {
-  background-color: var(--bg-color);
-  color: var(--text-color);
-  padding: 100px 5%;
   display: flex;
-  gap: 15px;
-
+  padding: 100px 15%;
+  gap: 20px;
   .singleProduct-right {
-    flex: 5;
-    .singleProduct-image {
-      img {
-        width: 100%;
-      }
-    }
-
-    h1 {
+    background-color: var(--post-color);
+    padding: 30px;
+    h3 {
       font-family: 'title';
+      font-size: 25px;
     }
     p {
+      line-height: 1.9;
       text-align: justify;
-      line-height: 2.1;
     }
   }
 
   .singleProduct-left {
-    flex: 1;
-    padding: 60px 20px;
     background-color: var(--post-color);
-    box-shadow: 2px 2px 10px 2px rgba(0, 0, 0, 0.1);
-    position: sticky;
-  }
+    padding-bottom: 25px;
+    img {
+      width: 400px;
+    }
 
-  .item-sidebar-info {
-    .item-sidebar-info-top {
-      h4 {
+    .singleProduct-left-content {
+      padding: 10px 15px;
+      .singleProduct-left-content-price {
+        display: flex;
+        align-items: center;
+        gap: 10px;
+        font-family: 'fanum';
+      }
+      .singleProduct-left-content-restaurant {
+        display: flex;
+        align-items: center;
+        gap: 10px;
+      }
+      .singleProduct-left-content-btn {
+        border: none;
+        padding: 5px 9px;
+        margin-top: 10px;
+        background-color: var(--primary-color);
+        color: #fff;
         font-family: 'title';
       }
-      .item-sidebar-info-restaurant {
-        font-size: 14px;
+    }
+
+    .singleProduct-left-cart {
+      padding: 10px 15px;
+
+      button {
+        border: none;
+        width: 20px;
+        height: 20px;
+        background-color: var(--secondary-color);
+        color: #fff;
+        margin: 0 5px;
       }
-      .item-sidebar-info-price {
+      span {
         font-family: 'fanum';
         font-weight: 900;
         color: var(--green-color);
-        margin-bottom: 10px;
-      }
-      .sidebar-info-price-total {
-        font-family: 'fanum';
-        font-weight: 900;
-        color: #fff;
-        font-size: 13px;
-        padding: 4px 5px;
-        background-color: var(--secondary-color);
-        margin-bottom: 10px;
-      }
-      button {
-        border: none;
-        margin: 5px 0;
-        padding: 5px 9px;
-        cursor: pointer;
-        margin-top: 15px;
       }
     }
-  }
 
-  .singleProduct-sidebar-header {
-    h3 {
-      font-family: 'title';
-      font-size: 20px;
-      margin-bottom: 10px;
+    .singleProduct-left-total {
+      display: flex;
+      align-items: center;
+      gap: 10px;
+      padding: 10px 15px;
     }
-    li {
-      padding-bottom: 3px;
-      margin-top: 3px;
-      cursor: pointer;
-      border-bottom: 1px solid rgb(205, 205, 205);
-    }
-    .production-sidebar-link {
-      text-decoration: none;
-      color: var(--text-color);
-      font-size: 14px;
-    }
-
-    margin-bottom: 30px;
-  }
-
-  .singleProduct-sidebar-middle {
-    h3 {
-      font-family: 'title';
-      font-size: 20px;
-      margin-bottom: 10px;
-    }
-    li {
-      padding-bottom: 3px;
-      margin-top: 3px;
-      cursor: pointer;
-      border-bottom: 1px solid rgb(205, 205, 205);
-    }
-    .production-sidebar-link {
-      text-decoration: none;
-      color: var(--text-color);
-      font-size: 14px;
-    }
-  }
-}
-
-@media screen and (max-width: 1430px) {
-  .singleProduct {
-    background-color: var(--bg-color);
-    color: var(--text-color);
-    padding: 100px 5%;
-    display: flex;
-    gap: 15px;
-
-    .singleProduct-right {
-      flex: 3;
-    }
-
-    .singleProduct-left {
-      flex: 1;
-    }
-  }
-}
-
-@media screen and (max-width: 1004px) {
-  .singleProduct {
-    .singleProduct-right {
-      flex: 2;
-    }
-
-    .singleProduct-left {
-      flex: 1;
-    }
-  }
-}
-
-@media screen and (max-width: 890px) {
-  .singleProduct {
-    flex-direction: column;
   }
 }
