--- a/src/pages/Production/SingleProduction/singleproduction.scss
+++ b/src/pages/Production/SingleProduction/singleproduction.scss
@@ -3,6 +3,7 @@
   padding: 100px 15%;
   gap: 20px;
   .singleProduct-right {
+    background-color: var(--post-color);
     padding: 30px;
     h3 {
       font-family: 'title';
@@ -24,7 +25,6 @@
           width: 100%;
         }
         .singleProduct-right-other-box {
-          background-color: var(--post-color);
           padding: 4px;
           h4 {
             font-family: 'title';
@@ -37,7 +37,10 @@
 
   .singleProduct-left {
     background-color: var(--post-color);
-    padding-bottom: 25px;
+    padding-bottom: 35px;
+    position: sticky;
+    top: 70px;
+    height: 100%;
     img {
       width: 400px;
     }
@@ -75,6 +78,7 @@
       margin-right: 20px;
       border-bottom: 2px solid var(--secondary-color);
       margin-bottom: 12px;
+
       p {
         font-family: 'fanum';
         font-weight: 900;
@@ -94,6 +98,31 @@
       span {
         color: var(--green-color);
         font-weight: 900;
+      }
+    }
+    .singleProduct-left-contact-us {
+      padding: 10px 20px;
+      margin-top: 20px;
+      h4 {
+        font-family: 'title';
+        font-size: 21px;
+      }
+      p {
+        line-height: 1.7;
+        text-align: justify;
+      }
+      ul {
+        margin-top: 25px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 7px;
+        li {
+          font-family: 'fanum';
+        }
+      }
+      .singleProduct-left-email {
+        font-family: 'Roboto';
       }
     }
   }
