--- a/src/pages/Production/SingleProduction/singleproduction.scss
+++ b/src/pages/Production/SingleProduction/singleproduction.scss
@@ -2,6 +2,10 @@
   display: flex;
   padding: 100px 15%;
   gap: 20px;
+  height: 100%;
+  width: 100%;
+  background-color: var(--bg-color);
+  color: var(--text-color);
   .singleProduct-right {
     background-color: var(--post-color);
     padding: 30px;
@@ -98,6 +102,7 @@
       span {
         color: var(--green-color);
         font-weight: 900;
+        font-family: 'fanum';
       }
     }
     .singleProduct-left-contact-us {
@@ -123,6 +128,62 @@
       }
       .singleProduct-left-email {
         font-family: 'Roboto';
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 1398px) {
+  .singleProduct {
+    display: flex;
+    padding: 100px 7%;
+    gap: 20px;
+    .singleProduct-right {
+    }
+    .singleProduct-left {
+    }
+  }
+}
+@media screen and (max-width: 1162px) {
+  .singleProduct {
+    display: flex;
+    padding: 100px 2%;
+    gap: 20px;
+    .singleProduct-right {
+    }
+    .singleProduct-left {
+    }
+  }
+}
+@media screen and (max-width: 945px) {
+  .singleProduct {
+    display: flex;
+    flex-direction: column-reverse;
+    padding: 100px 2%;
+    gap: 20px;
+    .singleProduct-right {
+    }
+    .singleProduct-left {
+      position: relative;
+      top: 0;
+      background-color: var(--bg-color);
+      .singleProduct-left-contact-us {
+        display: none;
+      }
+      img {
+        width: 70%;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 354px) {
+  .singleProduct {
+    .singleProduct-right {
+    }
+    .singleProduct-left {
+      .singleProduct-left-total {
+        font-size: 13px;
       }
     }
   }
