--- a/src/pages/Production/SingleProduction/singleproduction.scss
+++ b/src/pages/Production/SingleProduction/singleproduction.scss
@@ -20,7 +20,6 @@
 
     .singleProduct-right-other-container {
       margin-top: 50px;
-
       .singleProduct-right-other {
         display: grid;
         grid-template-columns: repeat(auto-fit, minmax(150px, auto));
@@ -33,6 +32,7 @@
           h4 {
             font-family: 'title';
             font-size: 14px;
+            color: var(--text-color);
           }
         }
       }
